# salvo-admin

./: Cargo.toml  README.md
sql/: ry_20230223.sql  tool_excel.sql
src/: main.rs
src/controller/: chat_controller.rs  common_controller.rs  dept_controller.rs  dict_controller.rs  excel_controller.rs  menu_controller.rs  mod.rs  monitor_controller.rs  notice_controller.rs  post_controller.rs  role_controller.rs  swagger_controller.rs  user_controller.rs
src/entity/: excel_entity.rs  mod.rs  sys_captcha_entity.rs  sys_dept_entity.rs  sys_dict_data_entity.rs  sys_dict_type_entity.rs  sys_menu_entity.rs  sys_notice_entity.rs  sys_post_entity.rs  sys_role_entity.rs  sys_role_menu_entity.rs  sys_user_entity.rs  sys_user_post_entity.rs  sys_user_role_entity.rs
src/mapper/: captcha_mapper.rs  dept_mapper.rs  dict_mapper.rs  excel_mapper.rs  menu_mapper.rs  mod.rs  notice_mapper.rs  post_mapper.rs  role_mapper.rs  role_menu_mapper.rs  user_mapper.rs  user_post_mapper.rs  user_role_mapper.rs
src/mapper/xml/: dept_xml.html  dict_xml.html  excel_xml.html  menu_xml.html  notice_xml.html  post_xml.html  role_menu_xml.html  role_xml.html  user_role_xml.html  user_xml.html
src/model/: chat_model.rs  common_model.rs  dept_model.rs  dict_model.rs  excel_model.rs  menu_model.rs  mod.rs  monitor_model.rs  notice_model.rs  post_model.rs  role_model.rs  swagger_model.rs  user_model.rs
src/router/: dept_router.rs  dict_router.rs  excel_router.rs  menu_router.rs  mod.rs  monitor_router.rs  notice_router.rs  post_router.rs  role_router.rs  user_router.rs
src/service/: dept_service.rs  dict_service.rs  excel_service.rs  menu_service.rs  mod.rs  monitor_service.rs  notice_service.rs  post_service.rs  role_service.rs  user_service.rs
src/utils/: captcha.rs  func.rs  md5.rs  mod.rs  mysql.rs  redis.rs  res.rs  system.rs  webtoken.rs
src/websocket/: excel_websocket.rs  mod.rs
static/: text1.txt
ui/: .gitignore  package.json  vite.config.js
ui/src/: main.js  permission.js
ui/src/api/system/: user.js
ui/src/api/tool/: excel.js
ui/src/components/: UploadImg.vue
ui/src/layout/: index.vue
ui/src/store/modules/: user.js
ui/src/utils/: request.js
ui/src/views/: index.vue  login.vue
ui/src/views/monitor/cache/: list.vue
ui/src/views/monitor/server/: index.vue
ui/src/views/system/chat/: index.vue
ui/src/views/system/dict/: data.vue  index.vue
ui/src/views/system/menu/: index.vue
ui/src/views/system/notice/: index.vue
ui/src/views/system/post/: index.vue
ui/src/views/system/role/: authUser.vue  index.vue  selectUser.vue
ui/src/views/system/user/: index.vue
ui/src/views/system/user/profile/: index.vue
ui/src/views/tool/excel/: index.vue
ui/src/views/tool/swagger/: index.vue
