[package]
name = "salvo-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = {version="0.42.0",features=["serve-static","oapi","logging","catch-panic"]}
captcha = "0.0.9"
md5 = "0.7.0"
jsonwebtoken = "8"
serde = {version="1",features=["derive"]}
serde_json = "1"
rbs = { version = "4.3"}
rbatis = { version = "4.3",features = ["debug_mode"]}
rbdc-mysql={version="4.3"}
tokio = { version = "1", features = ["full"] }
once_cell = "1.16.0"
uuid = {version="1.3.2",features=[
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
redis = { version = "0.23.0", features = ["tokio-comp"] }
log = "0.4"
fast_log = "1.5"